--- a/README.html
+++ b/README.html
@@ -51,7 +51,7 @@
           <div class="container">
           <div class="box">
             <img src="ordinateur.jpeg" alt="Exemple d'image">
-           <center><p style="font-family: 'typewriter', sans-serif;">modèle de sites pré-conçus</p></center>  <!-- Remplacez 'example.jpg' par le chemin de votre image -->
+           <center><p style="font-family: 'typewriter', sans-serif;">modèles de sites pré-conçus</p></center>  <!-- Remplacez 'example.jpg' par le chemin de votre image -->
           </div>
           <div class="box">
            <a href="../page montage/montage.html"> <img src="montage.jpeg" alt="Exemple d'image"></a>
