--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     </div>
       <div class="content">
         <div class="hidden-on-load" id="scrollElement">
-            <p style="font-size: 120%; color: black;">Trouvez votre bonheur chez Neden...
-            </p>
+         <center>  <p style="font-size: 120%; color: black;">Trouvez votre bonheur chez Neden...
+            </p></center> 
             <center> <p style="font-size: 350%; color: black;" id="site">Des modèles conçus à votre image</p></center>
             <h1 style="color: black;">Pour propulser votre entreprise</h1>
           </div>
@@ -50,7 +50,7 @@
         <div class="hidden-on-scroll" id="ElementScroll">
           <div class="container">
           <div class="box">
-            <img src="ordinateur.jpeg" alt="Exemple d'image">
+            <img src="ordinateur.jpeg" alt="Exemple d'image" class="ordinateur">
            <center><p style="font-family: 'typewriter', sans-serif;">modèles de sites pré-conçus</p></center>  <!-- Remplacez 'example.jpg' par le chemin de votre image -->
           </div>
           <div class="box">
